# sable-ios-patch

./: changelog.md  gradle.properties  iOS.md
buildSrc/src/main/groovy/: multiloader-common.gradle
common/src/main/java/dev/ryanhcode/sable/sublevel/plot/: ServerLevelPlot.java
common/src/main/java/dev/ryanhcode/sable/sublevel/system/: SubLevelPhysicsSystem.java
common/src/main/resources/: sable.mixins.json
common/src/main/rust/rapier/: Cargo.toml
fabric/: build.gradle
neoforge/: build.gradle
neoforge/src/main/java/dev/ryanhcode/sable/neoforge/mixin/compatibility/create/sticker/: StickerBlockEntityMixin.java
sable_rapier/src/main/rust/: Cargo.toml
